--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier": "^3.0.0",
     "ts-node-dev": "^2.0.0",
     "winston": "^3.10.0",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "zod": "^3.21.4"
   }
 }
