--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "src/**/*.ts": "yarn lint-prettier"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "eslint-config-prettier": "^8.8.0",
@@ -26,6 +27,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "eslint": "^8.44.0",
