--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "typescript": "^5.1.6"
@@ -33,6 +34,7 @@
     "eslint": "^8.44.0",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
+    "jsonwebtoken": "^9.0.1",
     "lint-staged": "^13.2.3",
     "mongoose": "^7.3.4",
     "prettier": "^3.0.0",
